#2557 Merged with 2.2.0-SNAPSHOT.