@@ -1,184 +1,164 @@
 package ua.com.fielden.platform.migration;
 
-import static java.lang.String.format;
-import static java.util.Optional.empty;
-import static java.util.Optional.of;
-import static java.util.stream.Collectors.toList;
-import static org.apache.logging.log4j.LogManager.getLogger;
-import static ua.com.fielden.platform.eql.dbschema.HibernateMappingsGenerator.ID_SEQUENCE_NAME;
-import static ua.com.fielden.platform.migration.MigrationUtils.generateEntityMd;
-import static ua.com.fielden.platform.utils.DbUtils.nextIdValue;
-
-import java.sql.BatchUpdateException;
-import java.sql.Connection;
-import java.sql.PreparedStatement;
-import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.sql.Statement;
-import java.sql.Timestamp;
-import java.util.ArrayList;
-import java.util.Calendar;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Map.Entry;
-import java.util.Optional;
-import java.util.TimeZone;
-import java.util.concurrent.atomic.AtomicLong;
-import java.util.function.Function;
-import java.util.stream.Collectors;
-
+import com.google.inject.Injector;
+import jakarta.inject.Provider;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.Logger;
 import org.joda.time.DateTime;
 import org.joda.time.Period;
-
-import com.google.inject.Injector;
-
+import ua.com.fielden.platform.dao.session.TransactionalExecution;
 import ua.com.fielden.platform.entity.AbstractEntity;
-import ua.com.fielden.platform.entity.factory.ICompanionObjectFinder;
-import ua.com.fielden.platform.meta.EntityMetadata;
-import ua.com.fielden.platform.meta.IDomainMetadata;
-import ua.com.fielden.platform.persistence.HibernateUtil;
+import ua.com.fielden.platform.types.tuples.T2;
+
+import java.sql.*;
+import java.util.*;
+import java.util.Map.Entry;
+import java.util.concurrent.atomic.AtomicLong;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+
+import static java.lang.String.format;
+import static java.util.Optional.empty;
+import static java.util.Optional.of;
+import static java.util.stream.Collectors.toMap;
+import static org.apache.logging.log4j.LogManager.getLogger;
+import static ua.com.fielden.platform.eql.dbschema.HibernateMappingsGenerator.ID_SEQUENCE_NAME;
+import static ua.com.fielden.platform.utils.DbUtils.nextIdValue;
+import static ua.com.fielden.platform.utils.StreamUtils.enumerate;
 
 public class DataMigrator {
+
+    public static final String ERR_WHILE_EXECUTING_RETRIEVERS = "An error occurred while executing retriever [%s]",
+                               ERR_TO_COMPILE_RETRIEVER = "Failed to compile retriever [%s].";
+
     private static final Integer BATCH_SIZE = 100;
 
-    private static final Logger LOGGER = getLogger(DataMigrator.class);
-
-    private final HibernateUtil hiberUtil;
-    private final List<IRetriever<? extends AbstractEntity<?>>> retrievers = new ArrayList<>();
-    private final IdCache cache;
+    private static final Logger LOGGER = getLogger();
 
     private static final TimeZone utcTz = TimeZone.getTimeZone("UTC");
     private static final Calendar utcCal = Calendar.getInstance(utcTz);
 
+    private final Provider<TransactionalExecution> transactionalExecutionProvider;
+    private final IdCache cache;
+    private final MigrationUtils utils;
+
     public DataMigrator(
             final Injector injector,
-            final HibernateUtil hiberUtil,
             final boolean skipValidations,
             final boolean includeDetails,
-            final Class<? extends IRetriever<? extends AbstractEntity<?>>>... retrieversClasses) throws SQLException {
+            final Class<? extends IRetriever<? extends AbstractEntity<?>>>... retrieverTypes) throws SQLException
+    {
         final DateTime start = new DateTime();
-        this.hiberUtil = hiberUtil;
-        this.retrievers.addAll(instantiateRetrievers(injector, retrieversClasses));
-        this.cache = new IdCache(injector.getInstance(ICompanionObjectFinder.class));
+        this.transactionalExecutionProvider = injector.getProvider(TransactionalExecution.class);
+        this.utils = injector.getInstance(MigrationUtils.class);
+        this.cache = new IdCache();
 
-        for (final IRetriever<? extends AbstractEntity<?>> ret : retrievers) {
+        final var retrievers = instantiateRetrievers(injector, retrieverTypes);
+
+        for (final var ret : retrievers) {
             if (!ret.isUpdater()) {
                 cache.registerCacheForType(ret.type());
             }
         }
 
-        final List<CompiledRetriever> retrieversJobs = generateRetrieversJobs(retrievers, injector.getInstance(IDomainMetadata.class));
+        final var sqlProducer = injector.getInstance(RetrieverSqlProducer.class);
+        final List<CompiledRetriever> compiledRetrievers = compileRetrievers(retrievers, utils, sqlProducer);
 
         final Connection legacyConn = injector.getInstance(Connection.class);
         if (!skipValidations) {
-        	new DataValidator(legacyConn, includeDetails, retrieversJobs).performValidations();
+            injector.getInstance(DataValidator.class).performValidations(legacyConn, includeDetails, compiledRetrievers);
         }
-        final long finalId = batchInsert(retrieversJobs, legacyConn, getNextId());
-        final Period pd = new Period(start, new DateTime());
+        final long lastId = batchInsert(compiledRetrievers, legacyConn, getNextId());
+        final var period = new Period(start, new DateTime());
 
-        final List<String> sql = new ArrayList<>();
-        sql.add(format("ALTER SEQUENCE %s RESTART WITH %s ", ID_SEQUENCE_NAME, finalId + 1));
-        runSql(sql);
+        runSql(List.of(format("ALTER SEQUENCE %s RESTART WITH %s ", ID_SEQUENCE_NAME, lastId + 1)));
 
-        LOGGER.info("Migration duration: " + pd.getMinutes() + " m " + pd.getSeconds() + " s " + pd.getMillis() + " ms");
+        LOGGER.info(() -> "Migration duration: %s m %s s %s ms".formatted(period.getMinutes(), period.getSeconds(), period.getMillis()));
     }
 
-    /**
-     * Prints out retrievers grouped by their entity types (only those that have more than one retriever per type).
-     *
-     * @param retrieversJobs
-     */
+    /// Prints out retrievers grouped by their entity types (only those that have more than one retriever per type).
+    ///
     private static void printRetrieversScheme(final List<CompiledRetriever> retrieversJobs) {
         final var allRetrieverByType = retrieversJobs.stream().collect(Collectors.groupingBy(CompiledRetriever::getType));
 
         for (final Entry<? extends Class<? extends AbstractEntity<?>>, List<CompiledRetriever>> typeAndItsRetrievers : allRetrieverByType.entrySet()) {
             if (typeAndItsRetrievers.getValue().size() > 1) {
-                System.out.println(" == " + typeAndItsRetrievers.getKey().getSimpleName());
+                LOGGER.info(() -> " == " + typeAndItsRetrievers.getKey().getSimpleName());
                 for (final CompiledRetriever compiledRetriever : typeAndItsRetrievers.getValue()) {
-                    System.out.println("        " + (compiledRetriever.retriever.isUpdater() ? "U" : " ") + " "
-                            + compiledRetriever.retriever.getClass().getSimpleName());
+                    LOGGER.info(() -> "        " + (compiledRetriever.isUpdater() ? "U" : " ") + " "
+                                      + compiledRetriever.retriever().getClass().getSimpleName());
                 }
             }
         }
     }
 
-    private static List<CompiledRetriever> generateRetrieversJobs(final List<IRetriever<? extends AbstractEntity<?>>> retrievers,
-                                                                  final IDomainMetadata domainMetadata) {
-        final var result = new ArrayList<CompiledRetriever>();
-        for (final var retriever : retrievers) {
-            try {
-                final String legacySql = RetrieverSqlProducer.getSql(retriever);
-                final var retResultFieldsIndices = new HashMap<String, Integer>();
-                int index = 1;
-                for (final var propPath : retriever.resultFields().keySet()) {
-                    retResultFieldsIndices.put(propPath, index);
-                    index = index + 1;
-                }
-                final var emd = domainMetadata.forEntity(retriever.type()).asPersistent()
-                        .orElseThrow(() -> new DataMigrationException("Unable to generate a retriever job for entity: [%s].".formatted(retriever.type())));
-                final var md = generateEntityMd(emd.data().tableName(), emd.properties(), domainMetadata);
+    private static List<CompiledRetriever> compileRetrievers(
+            final List<? extends IRetriever<? extends AbstractEntity<?>>> retrievers,
+            final MigrationUtils utils,
+            final RetrieverSqlProducer sqlProducer)
+    {
+        return retrievers.stream()
+                .map(retriever -> {
+                    try {
+                        final String legacySql = sqlProducer.getSql(retriever);
+                        final var md = utils.generateEntityMd(retriever.type());
 
-                if (retriever.isUpdater()) {
-                    result.add(CompiledRetriever.forUpdate(retriever, legacySql, new TargetDataUpdate(retriever.type(), retResultFieldsIndices, md), md));
-                } else {
-                    result.add(CompiledRetriever.forInsert(retriever, legacySql, new TargetDataInsert(retriever.type(), retResultFieldsIndices, md), md));
-                }
-            } catch (final Exception ex) {
-                throw new DataMigrationException("Errors while compiling retriever [" + retriever.getClass().getSimpleName() + "].", ex);
-            }
-        }
-
-        return result;
+                        final var resultFieldIndices = enumerate(retriever.resultFields().keySet().stream(), 1, T2::t2)
+                                .collect(toMap(t2 -> t2._1, t2 -> t2._2));
+                        if (retriever.isUpdater()) {
+                            return CompiledRetriever.forUpdate(retriever, legacySql, utils.targetDataUpdate(retriever.type(), resultFieldIndices, md), md);
+                        } else {
+                            return CompiledRetriever.forInsert(retriever, legacySql, utils.targetDataInsert(retriever.type(), resultFieldIndices, md), md);
+                        }
+                    }
+                    catch (final Exception ex) {
+                        throw new DataMigrationException(ERR_TO_COMPILE_RETRIEVER.formatted(retriever.getClass().getSimpleName()), ex);
+                    }
+                })
+                .toList();
     }
 
-    private static List<IRetriever<? extends AbstractEntity<?>>> instantiateRetrievers(final Injector injector, final Class<? extends IRetriever<? extends AbstractEntity<?>>>... retrieversClasses) {
-        final var result = new ArrayList<IRetriever<? extends AbstractEntity<?>>>();
-        for (final Class<? extends IRetriever<? extends AbstractEntity<?>>> retrieverClass : retrieversClasses) {
-            result.add(injector.getInstance(retrieverClass));
-        }
-        return result;
+    private static List<? extends IRetriever<? extends AbstractEntity<?>>> instantiateRetrievers(
+            final Injector injector,
+            final Class<? extends IRetriever<? extends AbstractEntity<?>>>... retrieverTypes)
+    {
+        return Arrays.stream(retrieverTypes).map(injector::getInstance).toList();
     }
 
-    private void runSql(final List<String> ddl) throws SQLException {
-        final var tr = hiberUtil.getSessionFactory().getCurrentSession().beginTransaction();
-        hiberUtil.getSessionFactory().getCurrentSession().doWork(conn -> {
-            for (final var sql : ddl) {
-                try (final Statement st = conn.createStatement()) {
+    private void runSql(final List<String> statements) {
+        transactionalExecutionProvider.get().exec(conn -> {
+            for (final var sql : statements) {
+                try (final var st = conn.createStatement()) {
                     st.execute(sql);
+                } catch (SQLException e) {
+                    throw new RuntimeException(e);
                 }
             }
         });
-        tr.commit();
     }
 
-    private long getNextId() throws SQLException {
-        final var tr = hiberUtil.getSessionFactory().getCurrentSession().beginTransaction();
-        final long result = nextIdValue(ID_SEQUENCE_NAME, hiberUtil.getSessionFactory().getCurrentSession());
-        tr.commit();
-        return result;
+    private long getNextId() {
+        return transactionalExecutionProvider.get()
+                .execWithSession(sessionEnabled -> nextIdValue(ID_SEQUENCE_NAME, sessionEnabled.getSession()));
     }
 
-    private long batchInsert(final List<CompiledRetriever> compiledRetrievers, final Connection legacyConn, final long startingId) throws SQLException {
-        final AtomicLong id = new AtomicLong(startingId);
-        for (final var cr : compiledRetrievers) {
-            try (final var legacyStmt = legacyConn.createStatement(); final var legacyRs = legacyStmt.executeQuery(cr.legacySql)) {
-                final var retrieverName = cr.retriever.getClass().getSimpleName();
-                LOGGER.info("Executing compiled retriever " + retrieverName);
-                try {
-                    final Function<TargetDataUpdate, Optional<Long>> updater = tdu -> {
-                        performBatchUpdates(tdu, legacyRs, retrieverName);
-                        return empty();
-                    };
-                    final Function<TargetDataInsert, Optional<Long>> inserter = tdi ->
-                        of(performBatchInserts(tdi, legacyRs, retrieverName, id.get()));
+    private long batchInsert(final List<CompiledRetriever> retrievers, final Connection legacyConn, final long firstId) throws SQLException {
+        final var id = new AtomicLong(firstId);
 
-                    cr.exec(updater, inserter).ifPresent(newId -> id.set(newId));
-                } catch (final Exception ex) {
-                    throw new DataMigrationException("Errors while processing " + retrieverName, ex);
-                }
+        for (final var ret : retrievers) {
+            final var retrieverName = ret.retriever().getClass().getSimpleName();
+            try (final var legacyStmt = legacyConn.createStatement(); final var legacyRs = legacyStmt.executeQuery(ret.legacySql())) {
+                LOGGER.info(() -> "Executing retriever [%s]".formatted(retrieverName));
+                final Function<TargetDataUpdate, Optional<Long>> updater = tdu -> {
+                    performBatchUpdates(tdu, legacyRs, retrieverName);
+                    return empty();
+                };
+                final Function<TargetDataInsert, Optional<Long>> inserter = tdi ->
+                    of(performBatchInserts(tdi, legacyRs, retrieverName, id.get()));
+
+                ret.exec(updater, inserter).ifPresent(id::set);
+            } catch (final Exception ex) {
+                throw new DataMigrationException(ERR_WHILE_EXECUTING_RETRIEVERS.formatted(retrieverName), ex);
             }
         }
 
@@ -188,27 +168,27 @@ public class DataMigrator {
     private void performBatchUpdates(final TargetDataUpdate tdu, final ResultSet legacyRs, final String retrieverName) {
         final var start = new DateTime();
         final var exceptions = new HashMap<String, List<List<Object>>>();
-        final var typeCache = cache.getCacheForType(tdu.retrieverEntityType);
-        final var tr = hiberUtil.getSessionFactory().getCurrentSession().beginTransaction();
-        hiberUtil.getSessionFactory().getCurrentSession().doWork(targetConn -> {
-            try (final var insertStmt = targetConn.prepareStatement(tdu.updateStmt)) {
+        final var typeCache = utils.cacheForType(cache, tdu.entityType());
+
+        transactionalExecutionProvider.get().exec(targetConn -> {
+            try (final var insertStmt = targetConn.prepareStatement(tdu.updateStmt())) {
                 int batchId = 0;
                 final var batchValues = new ArrayList<List<Object>>();
 
                 while (legacyRs.next()) {
                     batchId = batchId + 1;
                     final var keyValue = new ArrayList<>();
-                    for (final Integer keyIndex : tdu.keyIndices) {
+                    for (final Integer keyIndex : tdu.keyIndices()) {
                         keyValue.add(legacyRs.getObject(keyIndex));
                     }
-                    final Object key = keyValue.size() == 1 ? keyValue.get(0) : keyValue;
+                    final Object key = keyValue.size() == 1 ? keyValue.getFirst() : keyValue;
                     final Long idObject = typeCache.get(key);
                     if (idObject == null) {
-                        System.out.println("           !!! can't find id for " + tdu.retrieverEntityType.getSimpleName() + " with key: [" + key + "]");
+                        LOGGER.warn(() -> "           !!! can't find id for " + tdu.entityType().getSimpleName() + " with key: [" + key + "]");
                     } else {
                         final long id = idObject;
                         int index = 1;
-                        final var currTransformedValues = tdu.transformValuesForUpdate(legacyRs, cache, id);
+                        final var currTransformedValues = utils.transformValuesForUpdate(tdu, legacyRs, cache, id);
                         batchValues.add(currTransformedValues);
                         for (final Object value : currTransformedValues) {
                             insertStmt.setObject(index, value);
@@ -227,35 +207,40 @@ public class DataMigrator {
                 if (batchId % BATCH_SIZE != 0) {
                     repeatAction(insertStmt, batchValues, exceptions);
                 }
+            } catch (SQLException e) {
+                throw new RuntimeException(e);
             }
         });
-        tr.commit();
-        LOGGER.info(generateFinalMessage(start, retrieverName, typeCache.size(), tdu.updateStmt, exceptions));
+
+        LOGGER.info(generateFinalMessage(start, retrieverName, typeCache.size(), tdu.updateStmt(), exceptions));
     }
 
     private long performBatchInserts(final TargetDataInsert tdi, final ResultSet legacyRs, final String retrieverName, final long startingId) {
         final var start = new DateTime();
         final var exceptions = new HashMap<String, List<List<Object>>>();
-        final var typeCache = cache.getCacheForType(tdi.retrieverEntityType);
-        final var tr = hiberUtil.getSessionFactory().getCurrentSession().beginTransaction();
+        final var typeCache = utils.cacheForType(cache, tdi.entityType());
 
-        final long idToReturn = hiberUtil.getSessionFactory().getCurrentSession().doReturningWork(targetConn -> {
-            try (final var insertStmt = targetConn.prepareStatement(tdi.insertStmt)) {
+        return transactionalExecutionProvider.get().execFn(targetConn -> {
+            try (final var insertStmt = targetConn.prepareStatement(tdi.insertStmt())) {
                 int batchId = 0;
                 final var batchValues = new ArrayList<List<Object>>();
-                Long id = startingId;
+                long id = startingId;
                 while (legacyRs.next()) {
                     id = id + 1;
                     batchId = batchId + 1;
-                    final List<Object> keyValue = new ArrayList<>();
-                    for (final Integer keyIndex : tdi.keyIndices) {
-                        keyValue.add(legacyRs.getObject(keyIndex));
+                    final var keyValues = new ArrayList<>(tdi.keyIndices().size());
+                    for (final var keyIndex : tdi.keyIndices()) {
+                        keyValues.add(legacyRs.getObject(keyIndex));
                     }
-                    typeCache.put(keyValue.size() == 1 ? keyValue.get(0) : keyValue, id);
+                    final var cacheKey = keyValues.size() == 1 ? keyValues.getFirst() : keyValues;
+                    if (typeCache.containsKey(cacheKey)) {
+                        continue;
+                    }
+                    typeCache.put(cacheKey, id);
 
                     int index = 1;
-                    final var currTransformedValues = tdi.transformValuesForInsert(legacyRs, cache, id);
-                    batchValues.add(currTransformedValues.stream().map(f -> f._1).collect(toList()));
+                    final var currTransformedValues = utils.transformValuesForInsert(tdi, legacyRs, cache, id);
+                    batchValues.add(currTransformedValues.stream().map(f -> f._1).toList());
                     for (final var t2 : currTransformedValues) {
                         transformIfUtcValueAndSet(t2._2, insertStmt, index, t2._1);
                         index = index + 1;
@@ -273,23 +258,16 @@ public class DataMigrator {
                     repeatAction(insertStmt, batchValues, exceptions);
                 }
 
-                LOGGER.info(generateFinalMessage(start, retrieverName, typeCache.size(), tdi.insertStmt, exceptions));
+                LOGGER.info(() -> generateFinalMessage(start, retrieverName, typeCache.size(), tdi.insertStmt(), exceptions));
                 return id;
+            } catch (SQLException e) {
+                throw new RuntimeException(e);
             }
         });
-        tr.commit();
-        return idToReturn;
     }
 
-    /**
-     * Handles assignment of date/time fields for properties with UTC markers.
-     *
-     * @param propMetadata
-     * @param insertStmt
-     * @param index
-     * @param value
-     * @throws SQLException
-     */
+    /// Handles assignment of date/time fields for properties with UTC markers.
+    ///
     private void transformIfUtcValueAndSet(final boolean hasUtcType, final PreparedStatement insertStmt, final int index, final Object value) throws SQLException {
         if (hasUtcType) {
             final Timestamp ts = (Timestamp) value;
@@ -319,11 +297,8 @@ public class DataMigrator {
         } catch (final BatchUpdateException ex) {
             LOGGER.warn(ex);
             int updateIndex = 0;
-            final List<List<Object>> existingValue = exceptions.get(ex.toString());
-            if (existingValue == null) {
-                exceptions.put(ex.toString(), new ArrayList<List<Object>>());
-            }
-            final List<List<Object>> exValues = exceptions.get(ex.toString());
+            exceptions.computeIfAbsent(ex.toString(), k -> new ArrayList<List<Object>>());
+            final var exValues = exceptions.get(ex.toString());
             for (final int updateCount : ex.getUpdateCounts()) {
                 if (updateCount != 1) {
                     exValues.add(batchValues.get(updateIndex));
